= Changelog
:toc: macro
:project-url: https://github.com/sorairolake/sysexits-zig
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2023-05-19

=== Added

* Initial release