@@ -1,0 +1,4 @@
+[bumpversion]
+current_version = 0.1.0
+
+[bumpversion:file:gyro.zzz]
