@@ -28,3 +28,7 @@ default: build
 # Run the formatter for the README
 @fmt-readme:
     npx prettier -w README.md
+
+# Increment the version
+@bump part:
+    bump2version {{part}}
