@@ -12,6 +12,12 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 toc::[]
 
+== {compare-url}/v0.1.0\...HEAD[Unreleased]
+
+=== Added
+
+* Add gyro and zigmod support
+
 == {project-url}/releases/tag/v0.1.0[0.1.0] - 2023-05-19
 
 === Added
